--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -20,7 +20,9 @@
         <div class="nav-main">
           <button class="nav-btn" data-tab="truck" data-translate="tabs.truck">🚛Truck</button>
           <button class="nav-btn" data-tab="trailer" data-translate="tabs.trailer">🚚Trailer</button>
-          <button class="nav-btn active" data-tab="profile" data-translate="tabs.profile">💠Profile</button>
+          <button class="nav-btn active" data-tab="profile">
+            <span data-translate="tabs.profile">Profile</span>
+          </button>
           <button class="nav-btn" data-tab="settings" data-translate="tabs.settings">⚙️Settings</button>
           <div id="updateStatus" class="update-status"></div>
         </div>
@@ -29,7 +31,7 @@
           <button id="youtubeBtn" class="nav-action youtube" data-translate="buttons.youtube">🔴 YouTube</button>
           <button id="patreonBtn" class="nav-action patreon" data-translate="buttons.patreon">⚠️ Patreon</button>
           <button id="githubBtn" class="nav-action github" data-translate="buttons.github">⚠️ GitHub</button>
-          <button id="versionBtn" class="version-btn">0.4.0</button>
+          <button id="versionBtn" class="version-btn">0.4.1</button>
         </div>
       </nav>
     </header>
@@ -62,6 +64,7 @@
 
       <!-- Die Struktur für das benutzerdefinierte Dropdown-Menü -->
       <div class="profile-picker">
+        <img id="activeProfileIcon" src="images/icon_White.png" alt="Profile" class="profile-icon-footer">
         <span id="profileNameDisplay" data-translate="profile.select_profile"></span>
         <button id="openProfileModal">▼</button>
         <!-- Container für die dynamisch generierte Dropdown-Liste -->
